[gd_scene load_steps=3 format=3 uid="uid://daoo34xkqoi76"]

[ext_resource type="Script" path="res://ui/menu.gd" id="1_6uaf6"]
[ext_resource type="Texture2D" uid="uid://bpitfvaxxks0y" path="res://SPRITES/MenuUI/TitleScreen.png" id="2_syoat"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_6uaf6")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 2880.0
offset_bottom = 1620.0
scale = Vector2(0.222299, 0.220139)
texture = ExtResource("2_syoat")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 33.0
offset_top = 198.0
offset_right = 209.0
offset_bottom = 322.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 45.0
offset_top = 190.0
offset_right = 187.0
offset_bottom = 291.0

[node name="ButtonPlay" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Options"

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
